conect to backend

--- a/public/locales/tr/translation.json
+++ b/public/locales/tr/translation.json
@@ -1,3 +1,6 @@
 {
-  "ana səhifə": "anne sayfa"
+  "ana səhifə": "anne sayfa",
+  "haqqımızda": "hakkımızda",
+  "komandamız": "takımımız",
+  "xidmətlər": "hizmetler"
 }
