--- a/public/locales/az/translation.json
+++ b/public/locales/az/translation.json
@@ -1,3 +1,6 @@
 {
-  "ana səhifə": "ana səhifə"
+  "ana səhifə": "ana səhifə",
+  "haqqımızda": "haqqımızda",
+  "komandamız": "komandamız",
+  "xidmətlər": "xidmətlər"
 }
